update some file

--- a/Templates/home.html
+++ b/Templates/home.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>DevFolio Bootstrap Portfolio Template - Index</title>
+  <title>Zero-Waste</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -25,31 +25,64 @@
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: DevFolio - v2.0.0
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body id="page-top">
 
+
+
+
+
+<!-- Image and text -->
+
+
+
+
+
   <!-- ======= Header/ Navbar ======= -->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">Zero-Waste</a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
+      <a class="navbar-brand js-scroll" href="#page-top"><img src="{% static 'assets/img/zerowastlogo.png' %} " width="45" height="45" class="d-inline-block align-top" alt="">  Zero-Waste</a>
+      
+
+      <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
+    
+
+      
       
     </div>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        
+      </ul>
+      
+    </div>
+    
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(../static/assets/img/sas.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(../static/assets/img/zero-wast-public-support.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -168,6 +201,24 @@
         </div>
       </div>
     </section><!-- End Services Section -->
+
+
+
+    <div class="container">
+      <div class="card" >
+        <img class="card-img-top" src="{% static 'assets/img/zerowastposter.jpg' %}" alt="Card image cap">
+        
+        </div>
+      </div>
+
+
+      <br><br><br>
+      <div class="card" >
+        <img class="card-img-top" src="{% static 'assets/img/zerowastposter2.jpg' %}" alt="Card image cap">
+        
+        </div>
+      </div>
+    </div>
 
     <!-- ======= Contact Section ======= -->
     <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
