--- a/Templates/home.html
+++ b/Templates/home.html
@@ -11,8 +11,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link href="{% static 'assets/img/zerowastlogo.png' %}" rel="icon">
+  <link href="{% static 'assets/img/zerowastlogo.png' %}" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
   <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -57,7 +57,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <!-- <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
@@ -65,7 +65,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
+            
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Action</a>
@@ -73,7 +73,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
-        </li>
+        </li> -->
         
       </ul>
       
@@ -274,6 +274,7 @@
                       </form>
                     </div>
                   </div>
+
                   <div class="col-md-6">
                     <div class="title-box-2 pt-4 pt-md-0">
                       <h5 class="title-left">
@@ -295,6 +296,15 @@
                         
                       </ul>
                     </div>
+
+
+                    
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="cDCvcFm4"></script>
+    
+    
+    <div class="fb-page" data-href="https://www.facebook.com/ZeroWasteRecyclePlastic/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ZeroWasteRecyclePlastic/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ZeroWasteRecyclePlastic/">Zero waste-Recycle Plastic</a></blockquote></div>
+    
                   </div>
                 </div>
               </div>
@@ -305,6 +315,10 @@
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
+
+
+  
+
 
   <!-- ======= Footer ======= -->
   <footer>
